Complete Day2/2019 with Reason

--- a/2019/reason/bsconfig.json
+++ b/2019/reason/bsconfig.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "sources": [
     "1",
+    "2",
     {
       "dir": "1/__tests__",
+      "type": "dev"
+    },
+    {
+      "dir": "2/__tests__",
       "type": "dev"
     }
   ],
