Complete Day3/2019 with Reason
Upgrade bs-platform to version 7

--- a/2019/reason/bsconfig.json
+++ b/2019/reason/bsconfig.json
@@ -4,12 +4,17 @@
   "sources": [
     "1",
     "2",
+    "3",
     {
       "dir": "1/__tests__",
       "type": "dev"
     },
     {
       "dir": "2/__tests__",
+      "type": "dev"
+    },
+    {
+      "dir": "3/__tests__",
       "type": "dev"
     }
   ],
