Complete Day4/2019 with Reason

--- a/2019/reason/bsconfig.json
+++ b/2019/reason/bsconfig.json
@@ -5,6 +5,7 @@
     "1",
     "2",
     "3",
+    "4",
     {
       "dir": "1/__tests__",
       "type": "dev"
@@ -15,6 +16,10 @@
     },
     {
       "dir": "3/__tests__",
+      "type": "dev"
+    },
+    {
+      "dir": "4/__tests__",
       "type": "dev"
     }
   ],
